objects/zoom_app__Zoom_Webinar_Config__c.object
<CustomObject>
    <fields>
        <fullName>zoom_app__Add_Registrants_as_Campaign_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically add Webinar registrants as Campaign members.</description>
        <inlineHelpText>Automatically add Webinar registrants as Campaign members.</inlineHelpText>
        <label>Add Registrants as Campaign Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Create_Campaign_for_each_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically create a Salesforce Campaign for each new Webinar</description>
        <inlineHelpText>Automatically create a Salesforce Campaign for each new Webinar</inlineHelpText>
        <label>Create Campaign for each Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Create_new_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically create new Leads for Non-Salesforce registrants(Can&apos;t match with any Contact/Lead by Email).</description>
        <inlineHelpText>Automatically create new Leads for Non-Salesforce registrants(Can&apos;t match with any Contact/Lead by Email).</inlineHelpText>
        <label>Create new Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zoom_app__Syn_Webinar_Job_Schedule_Id__c</fullName>
        <label>Syn Webinar Job Schedule Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoom_app__Sync_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Backend Job to Sync Webinar from Zoom to Salesfore, inlcuding New Webinar/Registrants/Panelist/Participants</description>
        <inlineHelpText>Enable Backend Job to Sync Webinar from Zoom to Salesfore, inlcuding New Webinar/Registrants/Panelist/Participants</inlineHelpText>
        <label>Enable Sync Webinar Job</label>
        <type>Checkbox</type>
    </fields>
    <label>Zoom Webinar Config</label>
    <nameField>
        <label>ZoomWebinarConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Webinar Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>